fix alignments

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
-  height: 100%;
-  min-height: 100%;
+  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   min-width: 100%;
 }
